Checking some shi about inverse of diagonal and non-diagonal matrices

--- a/notebooks/2-linear-algebra-ii.ipynb
+++ b/notebooks/2-linear-algebra-ii.ipynb
@@ -5272,11 +5272,11 @@
         "lambdas_s"
       ],
       "metadata": {
-        "id": "EHI6zuLV_9vG",
-        "outputId": "2e678685-2a7b-41e4-f20d-00d5f19ea2dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EHI6zuLV_9vG",
+        "outputId": "2e678685-2a7b-41e4-f20d-00d5f19ea2dd"
       },
       "execution_count": 366,
       "outputs": [
@@ -5298,11 +5298,11 @@
         "Q_s"
       ],
       "metadata": {
-        "id": "hsZLkT8yAG19",
-        "outputId": "c525ba1e-e8e5-46a3-a23a-d8db51891291",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hsZLkT8yAG19",
+        "outputId": "c525ba1e-e8e5-46a3-a23a-d8db51891291"
       },
       "execution_count": 367,
       "outputs": [
@@ -5327,11 +5327,11 @@
         "S_from_decomp"
       ],
       "metadata": {
-        "id": "VUp_lWGFAI_6",
-        "outputId": "e80b6bf0-08cc-4849-865d-339a1eba65b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VUp_lWGFAI_6",
+        "outputId": "e80b6bf0-08cc-4849-865d-339a1eba65b2"
       },
       "execution_count": 377,
       "outputs": [
@@ -5355,11 +5355,11 @@
         "S"
       ],
       "metadata": {
-        "id": "wlxKBtKuCykE",
-        "outputId": "2ac6c90d-9527-4134-899c-fcd421e44679",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wlxKBtKuCykE",
+        "outputId": "2ac6c90d-9527-4134-899c-fcd421e44679"
       },
       "execution_count": 374,
       "outputs": [
@@ -5384,11 +5384,11 @@
         "Q_s_norms"
       ],
       "metadata": {
-        "id": "9wove8OlC0ef",
-        "outputId": "06d8cc48-c2ed-4cf7-def8-e189b7263989",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9wove8OlC0ef",
+        "outputId": "06d8cc48-c2ed-4cf7-def8-e189b7263989"
       },
       "execution_count": 381,
       "outputs": [
@@ -5410,11 +5410,11 @@
         "torch.linalg.inv(Q_s)"
       ],
       "metadata": {
-        "id": "6P-aw3i5DS4P",
-        "outputId": "381e788f-9247-4470-a59a-89ef80adc3b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6P-aw3i5DS4P",
+        "outputId": "381e788f-9247-4470-a59a-89ef80adc3b3"
       },
       "execution_count": 383,
       "outputs": [
@@ -5438,11 +5438,11 @@
         "Q_s.T"
       ],
       "metadata": {
-        "id": "S0SfWUVwEIxl",
-        "outputId": "4fe1f151-e3de-4f03-9667-e817d5492115",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S0SfWUVwEIxl",
+        "outputId": "4fe1f151-e3de-4f03-9667-e817d5492115"
       },
       "execution_count": 384,
       "outputs": [
@@ -5764,11 +5764,11 @@
         "P"
       ],
       "metadata": {
-        "id": "UaiF7rGYeKTG",
-        "outputId": "0b331801-3431-428c-a80b-7b2526d7c7bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UaiF7rGYeKTG",
+        "outputId": "0b331801-3431-428c-a80b-7b2526d7c7bf"
       },
       "execution_count": 385,
       "outputs": [
@@ -5805,11 +5805,11 @@
         "SU_p"
       ],
       "metadata": {
-        "id": "eAmGyvlGfj0M",
-        "outputId": "265669e7-dcd6-4e63-82db-44059ebb2762",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eAmGyvlGfj0M",
+        "outputId": "265669e7-dcd6-4e63-82db-44059ebb2762"
       },
       "execution_count": 390,
       "outputs": [
@@ -5833,11 +5833,11 @@
         "torch.linalg.eig(torch.matmul(P, P.T))"
       ],
       "metadata": {
-        "id": "vQa1cPKhf42F",
-        "outputId": "0aa3c692-65c8-4cb1-8750-16f20c531958",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vQa1cPKhf42F",
+        "outputId": "0aa3c692-65c8-4cb1-8750-16f20c531958"
       },
       "execution_count": 392,
       "outputs": [
@@ -5856,6 +5856,177 @@
           "execution_count": 392
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checks out fine!!"
+      ],
+      "metadata": {
+        "id": "ADBBMM2gg2f9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Checking some shi about how inversion of a matrix works"
+      ],
+      "metadata": {
+        "id": "64qlYq_ercY9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P"
+      ],
+      "metadata": {
+        "id": "r8FD-OWCraQ0",
+        "outputId": "086498fe-38ef-4c4c-e6a1-d182befae2a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 393,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[25.,  2., -5.],\n",
+              "        [ 3., -2.,  1.],\n",
+              "        [ 5.,  7.,  4.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 393
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.linalg.inv(P)"
+      ],
+      "metadata": {
+        "id": "owIMEQkTrpjD",
+        "outputId": "5c04451d-22a1-4b2c-cd8a-c0ca70788fcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 394,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0.0276,  0.0790,  0.0147],\n",
+              "        [ 0.0129, -0.2298,  0.0735],\n",
+              "        [-0.0570,  0.3033,  0.1029]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 394
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[1/ 25, 1 / -2, 1 / 4]"
+      ],
+      "metadata": {
+        "id": "kEmsinAasj7I",
+        "outputId": "44a87fbd-5230-4d89-bdc0-5c62b21590f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 405,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.04, -0.5, 0.25]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 405
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Y = torch.tensor([\n",
+        "    [4, 0, 0],\n",
+        "    [0, 3, 0],\n",
+        "    [0, 0, 7.]\n",
+        "])\n",
+        "\n",
+        "torch.linalg.inv(Y)"
+      ],
+      "metadata": {
+        "id": "aH6LDuPprwoy",
+        "outputId": "18289d7c-4a09-462a-ffd7-d4741bce7d0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 402,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2500, 0.0000, 0.0000],\n",
+              "        [0.0000, 0.3333, 0.0000],\n",
+              "        [0.0000, 0.0000, 0.1429]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 402
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[1/ 4, 1/ 3, 1/ 7.]"
+      ],
+      "metadata": {
+        "id": "AGTJOEI0sYsJ",
+        "outputId": "f257329f-a4b8-4132-9311-7d3e96858f2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 404,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.25, 0.3333333333333333, 0.14285714285714285]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 404
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- I see!\n",
+        "  - For a diagonal matrix, its inverse is equal to another matrix with its elements all inverted.\n",
+        "  - However for a non-diagonal matrix, its inverse is a totally different looking matrix"
+      ],
+      "metadata": {
+        "id": "oFmdkGcoss2r"
+      }
     },
     {
       "cell_type": "markdown",
