Finding pseudo inverse of singular matrices (since they don't have standard inverses)

--- a/notebooks/2-linear-algebra-ii.ipynb
+++ b/notebooks/2-linear-algebra-ii.ipynb
@@ -5881,11 +5881,11 @@
         "P"
       ],
       "metadata": {
-        "id": "r8FD-OWCraQ0",
-        "outputId": "086498fe-38ef-4c4c-e6a1-d182befae2a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r8FD-OWCraQ0",
+        "outputId": "086498fe-38ef-4c4c-e6a1-d182befae2a1"
       },
       "execution_count": 393,
       "outputs": [
@@ -5909,11 +5909,11 @@
         "torch.linalg.inv(P)"
       ],
       "metadata": {
-        "id": "owIMEQkTrpjD",
-        "outputId": "5c04451d-22a1-4b2c-cd8a-c0ca70788fcc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "owIMEQkTrpjD",
+        "outputId": "5c04451d-22a1-4b2c-cd8a-c0ca70788fcc"
       },
       "execution_count": 394,
       "outputs": [
@@ -5937,11 +5937,11 @@
         "[1/ 25, 1 / -2, 1 / 4]"
       ],
       "metadata": {
-        "id": "kEmsinAasj7I",
-        "outputId": "44a87fbd-5230-4d89-bdc0-5c62b21590f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kEmsinAasj7I",
+        "outputId": "44a87fbd-5230-4d89-bdc0-5c62b21590f2"
       },
       "execution_count": 405,
       "outputs": [
@@ -5969,11 +5969,11 @@
         "torch.linalg.inv(Y)"
       ],
       "metadata": {
-        "id": "aH6LDuPprwoy",
-        "outputId": "18289d7c-4a09-462a-ffd7-d4741bce7d0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aH6LDuPprwoy",
+        "outputId": "18289d7c-4a09-462a-ffd7-d4741bce7d0e"
       },
       "execution_count": 402,
       "outputs": [
@@ -5997,11 +5997,11 @@
         "[1/ 4, 1/ 3, 1/ 7.]"
       ],
       "metadata": {
-        "id": "AGTJOEI0sYsJ",
-        "outputId": "f257329f-a4b8-4132-9311-7d3e96858f2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AGTJOEI0sYsJ",
+        "outputId": "f257329f-a4b8-4132-9311-7d3e96858f2f"
       },
       "execution_count": 404,
       "outputs": [
@@ -6899,13 +6899,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f17642eb-638f-48d1-e813-15d923c55f35"
+        "outputId": "ae57fbb9-277d-4886-d835-95c3a91724e4"
       },
       "source": [
         "A_p = torch.tensor([[-1, 2], [3, -2], [5, 7.]])\n",
         "A_p"
       ],
-      "execution_count": 327,
+      "execution_count": 406,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6917,7 +6917,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 327
+          "execution_count": 406
         }
       ]
     },
@@ -6928,12 +6928,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da5a2c34-e70c-4285-db22-b0fb86c9a481"
+        "outputId": "54f5be5f-78af-4cc4-cc80-20df166e7056"
       },
       "source": [
         "torch.pinverse(A_p)"
       ],
-      "execution_count": 328,
+      "execution_count": 407,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6944,9 +6944,138 @@
             ]
           },
           "metadata": {},
-          "execution_count": 328
+          "execution_count": 407
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Okay Lemme do that"
+      ],
+      "metadata": {
+        "id": "x7OQMD5_xXv1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "U_A_p, d_A_p, VT_A_p = torch.linalg.svd(A_p)\n",
+        "d_A_p"
+      ],
+      "metadata": {
+        "id": "S3iG4DlSx5RS",
+        "outputId": "0cca3890-4e01-457c-fe43-13cdfa91398d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 411,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([8.6692, 4.1043])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 411
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "D_A_p_plus = torch.linalg.inv(torch.diag(d_A_p)) # the inverse of a square diagonal matrix is equal to it's pseudo inverse, provided all diagonals elements are non-zero\n",
+        "D_A_p_plus"
+      ],
+      "metadata": {
+        "id": "eDsvUFwtynr6",
+        "outputId": "1ad00e3c-a004-4798-9132-e6c903b6a0fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 421,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1154, 0.0000],\n",
+              "        [0.0000, 0.2436]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 421
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "D_A_p_plus = torch.cat((D_A_p_plus, torch.zeros(2,1)), dim=1)\n",
+        "D_A_p_plus"
+      ],
+      "metadata": {
+        "id": "B27qBBg60ssG",
+        "outputId": "e3bcefa5-e37e-44ab-bdb3-8611ec83b2ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 424,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1154, 0.0000, 0.0000],\n",
+              "        [0.0000, 0.2436, 0.0000]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 424
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A_p_pinverse = VT_A_p.T @ D_A_p_plus @ U_A_p.T\n",
+        "A_p_pinverse"
+      ],
+      "metadata": {
+        "id": "is6kJ4Mc0OP7",
+        "outputId": "e9832a61-d993-4126-a493-26ab64d1275a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 425,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.0877,  0.1777,  0.0758],\n",
+              "        [ 0.0766, -0.1193,  0.0869]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 425
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checks out!!! it's equal to using the inbuilt torch.pinverse(A_p)"
+      ],
+      "metadata": {
+        "id": "UZAclHKY1S_n"
+      }
     },
     {
       "cell_type": "markdown",
